--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
     <title>Espanjan Omena</title>
   </head>
   <body>
+    <b1>Espanjan Omena</b1>
     <p>Espanjan omena on Brasiliassa kasvava omenalaji, jonka löysi Kristoffer Kolumbus noin vuonna 1495. Tämä voidaan päätellä hänen salaisesta päiväkirjastaan.</p>
     <p>Espanjan omena maistuu rahkalta. Omenaa kasvattaa vain kuusi henkilöä: Kuusi brasilialaista, kaikki nimeltään Gabriel. Kolme heistä ovat tunnettuja</p>
     <p>jalkapalloilijoita Arsenalissa, muut kolme ovat mysteerihenkilöitä. Omenan kasvattaminen on vaikeaa ja siihen tarvitaan ohje, tästä ohjeesta on vain 5 kopiota.</p>
     <p>yksi on kolumbuksen päiväkirjassa, jokaisella gabrielilla on myös oma sekä jokaisella mysteerihenkilöllä 1/3 ohjeesta.</p>
-    <p> </p>
+    <p>\n</p>
     <p>Omenalla on monia ominaisuuksia joita nykyfyysikotkaan ei pysty selittämään:</p>
-    <p> </p>
+    <p>\n</p>
     <p> - Omena on isokokoinen (Kypsänä painaa noin 5kg ja on hakaisijaltaan noin 15cm)</p>
     <p> - Omenasta saa paljon mehua (Kypsästä omenasta saa noin 6L mehua)</p>
     <p> - Omenan sisällä on pieni käsikranaattri (Jos omenaa ei käsittel oikein se voi räjähtää, räjähdyksessä syntyy myös paljon pieniä kranaatti omenia)</p>
     <p> - Omenalla on oma painovoima-ja magneetikenttä.</p>
     <p> - Omenanan sähkövaraus vaihtelee sääsätä ja omenan mielialasta riippuen (Omenaa kiertää noin 3-28 elektronia, ytimessä on 5-10 protonia ja 6-8 neutronia)</p>  
+    <p>\n</p>
+    <b1>Kolumbuksen matkat</b1>
+    <p>Tähän tulee tarinaa kolumbuksen matkoista</p>
   </body>
 </html>
